--- a/templates/meeting_update.html
+++ b/templates/meeting_update.html
@@ -213,3 +213,4 @@
         <input type="text" class="form-control" name="text-1644381513895" id="text-1644381513895">
     </div>
 </div>
+<p class="submit"><input type="submit" name="submit" id="submit" class="button button-primary" value="Submit Form"></p>
