--- a/templates/meeting_update.html
+++ b/templates/meeting_update.html
@@ -1,7 +1,7 @@
 <div class="rendered-form">
     <div>
         <label for="select-1644380777485" class="formbuilder-select-label">Reason For Update</label>
-        <select class="form-control" name="select-1644380777485" id="update-reason">
+        <select name="select-1644380777485" id="update-reason">
             <option disabled="null" selected="null">select</option>
             <option value="reason-new" id="select-1644380777485-0">New Meeting</option>
             <option value="reason-change" id="select-1644380777485-1">Change Existing Meeting</option>
@@ -16,11 +16,11 @@
     </div>
     <div id="other-reason">
         <label for="text-1644380729877">Other Reason</label>
-        <input type="text" class="form-control" name="text-1644380729877" id="text-1644380729877">
+        <input type="text" name="text-1644380729877" id="text-1644380729877">
     </div>
     <div>
         <label for="text-1644380826512">Group Name</label>
-        <input type="text" class="form-control" name="text-1644380826512" id="meeting_name">
+        <input type="text" name="text-1644380826512" id="meeting_name">
     </div>
     <div>
         <label for="day_of_the_week" class="formbuilder-checkbox-group-label">Group Meets On Which Days<span
@@ -59,17 +59,17 @@
     <div>
         <label for="start_time" class="formbuilder-number-label">Start Time<span
                 class="formbuilder-required">*</span></label>
-        <input type="text" class="form-control" name="start_time" id="start_time" required="required"
+        <input type="text" name="start_time" id="start_time" required="required"
             aria-required="true">
     </div>
     <div>
         <label for="duration_time">Duration</label>
-        <input type="text" class="form-control" name="duration_time" id="duration_time" required="required"
+        <input type="text" name="duration_time" id="duration_time" required="required"
             aria-required="true">
     </div>
     <div>
         <label for="select-1644380962171" class="formbuilder-select-label">Time Zone</label>
-        <select class="form-control" name="select-1644380962171" id="time_zone">
+        <select name="select-1644380962171" id="time_zone">
             <option value="Australia/Adelaide">Australian Central Time (Adelaide)</option>
             <option value="Australia/Darwin">Australian Central Time (Darwin)</option>
             <option value="Australia/Eucla">Australian Central Western Time (Eucla)</option>
@@ -80,7 +80,7 @@
     </div>
     <div>
         <label for="select-1644380979730" class="formbuilder-select-label">Committee</label>
-        <select class="form-control" name="select-1644380979730" id="service_area">
+        <select name="select-1644380979730" id="service_area">
             <option value="Sydney Metro North" selected="selected">Sydney Metro North</option>
             <option value="Sydney Metro South">Sydney Metro South</option>
             <option value="Sydney Metro East">Sydney Metro East</option>
@@ -111,27 +111,27 @@
     </div>
     <div>
         <label for="text-1644381018555">Location (eg: a building name)</label>
-        <input type="text" class="form-control" id="location_text">
+        <input type="text" id="location_text">
     </div>
     <div>
         <label for="text-1644381025138">Street Address</label>
-        <input type="text" class="form-control" id="location_street">
+        <input type="text" id="location_street">
     </div>
     <div>
         <label for="text-1644381046194">Extra Location Info (eg: Near the park)</label>
-        <input type="text" class="form-control" id="location_info">
+        <input type="text" id="location_info">
     </div>
     <div>
         <label for="text-1644381061329">City/Town/Suburb</label>
-        <input type="text" class="form-control" id="location_municipality">
+        <input type="text" id="location_municipality">
     </div>
     <div>
         <label for="text-1644381070296">State</label>
-        <input type="text" class="form-control" id="location_province">
+        <input type="text" id="location_province">
     </div>
     <div>
         <label for="number-1644381080899" class="formbuilder-number-label">Postcode</label>
-        <input type="number" class="form-control" id="location_postal_code_1">
+        <input type="number" id="location_postal_code_1">
     </div>
     <div id="formats">
         <label for="format-group">Meeting Format</label>
@@ -141,27 +141,27 @@
     </div>
     <div>
         <label for=" text-1644381196060">Online Meeting Link</label>
-            <input type="text" class="form-control" name="text-1644381196060" id="text-1644381196060">
+            <input type="text" name="text-1644381196060" id="text-1644381196060">
     </div>
     <div>
         <label for="date-1644381216519" class="formbuilder-date-label">Date Change Required<span
                 class="formbuilder-required">*</span></label>
-        <input type="date" class="form-control" name="date-1644381216519" id="date-1644381216519" required="required"
+        <input type="date" name="date-1644381216519" id="date-1644381216519" required="required"
             aria-required="true">
     </div>
     <div>
         <label for="text-1644381268053">First Name<span class="formbuilder-required">*</span></label>
-        <input type="text" class="form-control" name="text-1644381268053" id="text-1644381268053" required="required"
+        <input type="text" name="text-1644381268053" id="text-1644381268053" required="required"
             aria-required="true">
     </div>
     <div>
         <label for="text-1644381277924">Last Name<span class="formbuilder-required">*</span></label>
-        <input type="text" class="form-control" name="text-1644381277924" id="text-1644381277924" required="required"
+        <input type="text" name="text-1644381277924" id="text-1644381277924" required="required"
             aria-required="true">
     </div>
     <div>
         <label for="text-1644381293991">Email Address<span class="formbuilder-required">*</span></label>
-        <input type="text" class="form-control" name="text-1644381293991" id="text-1644381293991" required="required"
+        <input type="text" name="text-1644381293991" id="text-1644381293991" required="required"
             aria-required="true">
     </div>
     <div>
@@ -177,7 +177,7 @@
     </div>
     <div>
         <label for="number-1644381352355" class="formbuilder-number-label">Contact Number (Confidential)</label>
-        <input type="number" class="form-control" name="number-1644381352355" id="number-1644381352355">
+        <input type="number" name="number-1644381352355" id="number-1644381352355">
     </div>
     <div>
         <label for="radio-group-1644381392768" class="formbuilder-radio-group-label">Are you a?</label>
@@ -199,18 +199,18 @@
     </div>
     <div>
         <label for="text-1644381354649">Additional Info</label>
-        <input type="text" class="form-control" name="text-1644381354649" id="text-1644381354649">
+        <input type="text" name="text-1644381354649" id="text-1644381354649">
     </div>
     <div>
         <label for="select-1644381474827" class="formbuilder-select-label">Starter Kit Required</label>
-        <select class="form-control" name="select-1644381474827" id="select-1644381474827">
+        <select name="select-1644381474827" id="select-1644381474827">
             <option value="yes" selected="true" id="select-1644381474827-0">Yes</option>
             <option value="no" id="select-1644381474827-1">No</option>
         </select>
     </div>
     <div>
         <label for="text-1644381513895">Starter Kit Postal Address</label>
-        <input type="text" class="form-control" name="text-1644381513895" id="text-1644381513895">
+        <input type="text" name="text-1644381513895" id="text-1644381513895">
     </div>
 </div>
 <p class="submit"><input type="submit" name="submit" id="submit" class="button button-primary" value="Submit Form"></p>
