--- a/templates/meeting_update.html
+++ b/templates/meeting_update.html
@@ -59,13 +59,11 @@
     <div>
         <label for="start_time" class="formbuilder-number-label">Start Time<span
                 class="formbuilder-required">*</span></label>
-        <input type="text" name="start_time" id="start_time" required="required"
-            aria-required="true">
+        <input type="text" name="start_time" id="start_time" required="required" aria-required="true">
     </div>
     <div>
         <label for="duration_time">Duration</label>
-        <input type="text" name="duration_time" id="duration_time" required="required"
-            aria-required="true">
+        <input type="text" name="duration_time" id="duration_time" required="required" aria-required="true">
     </div>
     <div>
         <label for="select-1644380962171" class="formbuilder-select-label">Time Zone</label>
@@ -137,7 +135,6 @@
         <label for="format-group">Meeting Format</label>
         <ul style="list-style-type:none;"">
         </ul>
-        </div>
     </div>
     <div>
         <label for=" text-1644381196060">Online Meeting Link</label>
@@ -146,23 +143,19 @@
     <div>
         <label for="date-1644381216519" class="formbuilder-date-label">Date Change Required<span
                 class="formbuilder-required">*</span></label>
-        <input type="date" name="date-1644381216519" id="date-1644381216519" required="required"
-            aria-required="true">
+        <input type="date" name="date-1644381216519" id="date-1644381216519" required="required" aria-required="true">
     </div>
     <div>
         <label for="text-1644381268053">First Name<span class="formbuilder-required">*</span></label>
-        <input type="text" name="text-1644381268053" id="text-1644381268053" required="required"
-            aria-required="true">
+        <input type="text" name="text-1644381268053" id="text-1644381268053" required="required" aria-required="true">
     </div>
     <div>
         <label for="text-1644381277924">Last Name<span class="formbuilder-required">*</span></label>
-        <input type="text" name="text-1644381277924" id="text-1644381277924" required="required"
-            aria-required="true">
+        <input type="text" name="text-1644381277924" id="text-1644381277924" required="required" aria-required="true">
     </div>
     <div>
         <label for="text-1644381293991">Email Address<span class="formbuilder-required">*</span></label>
-        <input type="text" name="text-1644381293991" id="text-1644381293991" required="required"
-            aria-required="true">
+        <input type="text" name="text-1644381293991" id="text-1644381293991" required="required" aria-required="true">
     </div>
     <div>
         <label for="checkbox-group-1644381304426" class="formbuilder-checkbox-group-label">Add this email as contact
