--- a/css/admin_page.css
+++ b/css/admin_page.css
@@ -2,6 +2,7 @@ table.committeetable tr:hover > td {
     background: #fff;
 }
 table.committeetable th {
+    background: #fff;
     padding-left: 15px;
     padding-right: 0px;
     width: auto;
