--- a/css/admin_page.css
+++ b/css/admin_page.css
@@ -6,5 +6,5 @@ table.committeetable th {
     padding-left: 15px;
     padding-right: 0px;
     width: auto;
-    border-color: transparent;
+    border-color: #fff;
 }
