--- a/css/admin_page.css
+++ b/css/admin_page.css
@@ -8,7 +8,7 @@ table.committeetable th {
     width: auto;
 }
 
-table.committeetable th {
+table.committeetable td {
     padding-bottom: 0px;
 }
 
