--- a/templates/default_existing_meeting_email_template.html
+++ b/templates/default_existing_meeting_email_template.html
@@ -16,48 +16,48 @@
     <tbody>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Group Name</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_meeting_name}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_meeting_name}</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:meeting_name}</b></td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Start Time</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_start_time}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_start_time}</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:start_time}</b></td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Duration</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_duration_time}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_duration_time}</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:duration_time}</b></td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Time Zone</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_time_zone}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_time_zone}</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:time_zone}</b></td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Formats</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_formats}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_formats}</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:formats}</b></td>
         </tr>
         
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Weekdays</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_weekday}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_weekday}</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:weekday}</b></td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Meeting Link</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_virtual_meeting_link}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_virtual_meeting_link}</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:virtual_meeting_link}</b></td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Additional Info</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_virtual_meeting_additional_info}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_virtual_meeting_additional_info}</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:virtual_meeting_additional_info}</b></td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">BMLT Comments</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_comments}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_comments}</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:comments}</b>
             </td>
         </tr>
