--- a/templates/default_existing_meeting_email_template.html
+++ b/templates/default_existing_meeting_email_template.html
@@ -82,7 +82,7 @@
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Location Info</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_location_info}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:_origlocation_info}</b>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:location_info}</b>
             </td>
         </tr>
         <tr>
