--- a/templates/default_existing_meeting_email_template.html
+++ b/templates/default_existing_meeting_email_template.html
@@ -52,50 +52,50 @@
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Group Name</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_meeting_name}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:meeting_name}</b></td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:meeting_name}</td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Start Time</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_start_time}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:start_time}</b></td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:start_time}</td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Duration</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_duration_time}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:duration_time}</b></td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:duration_time}</td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Formats</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_formats}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:formats}</b></td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:formats}</td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Location Text</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_location_text}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:location_text}</b></td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:location_text}</td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Location Street</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_location_street}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:location_street}</b></td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:location_street}</td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Location Info</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_location_info}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:location_info}</b>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:location_info}
             </td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Location Municipality</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_location_municipality}
             </td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:location_municipality}</b>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:location_municipality}
             </td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Location Province</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_location_province}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:location_province}</b>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:location_province}
             </td>
         </tr>
         <tr>
@@ -103,20 +103,20 @@
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_location_postal_code_1}
             </td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">
-                <b>{field:location_postal_code_1}</b>
+                {field:location_postal_code_1}
             </td>
         </tr>
 
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Weekdays</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_weekday}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:weekday}</b></td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:weekday}</td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Meeting Link</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_virtual_meeting_link}
             </td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:virtual_meeting_link}</b>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:virtual_meeting_link}
             </td>
         </tr>
         <tr>
@@ -124,13 +124,13 @@
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">
                 {field:orig_virtual_meeting_additional_info}</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">
-                <b>{field:virtual_meeting_additional_info}</b>
+                {field:virtual_meeting_additional_info}
             </td>
         </tr>
         <!-- <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">BMLT Comments</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_comments}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:comments}</b>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:comments}
             </td>
         </tr> -->
 
