--- a/templates/default_existing_meeting_email_template.html
+++ b/templates/default_existing_meeting_email_template.html
@@ -30,6 +30,12 @@
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:contact_number_confidential}
             </td>
         </tr>
+        <tr>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Additional Info</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">
+                {field:additional_info}
+            </td>
+        </tr>
     </tbody>
 </table>
 
@@ -117,14 +123,6 @@
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_virtual_meeting_link}
             </td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:virtual_meeting_link}
-            </td>
-        </tr>
-        <tr>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Additional Info</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">
-                {field:orig_virtual_meeting_additional_info}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">
-                {field:virtual_meeting_additional_info}
             </td>
         </tr>
         <!-- <tr>
