--- a/templates/default_close_meeting_email_template.html
+++ b/templates/default_close_meeting_email_template.html
@@ -1,6 +1,9 @@
 <p>Hi {field:first_name}<br>Thank you for submitting the meeting close request.<br>We will usually be able action your
     request within 48 hours.<br>Our process also updates NA websites around Australia and at NA World Services.<br>
-    ------------------------</p>
+</p>
+<hr><br>
+    <p>Actioner: This is a MEETING CLOSE request. All meeting details below have been retrieved from BMLT</p>
+    <br>
 <table class="blueTable" style="border: 1px solid #1C6EA4;background-color: #EEEEEE;text-align: left;border-collapse: collapse;">
     <thead style="background: #1C6EA4;border-bottom: 2px solid #444444;">
         <tr>
