--- a/css/meeting-update-form.css
+++ b/css/meeting-update-form.css
@@ -1,5 +1,5 @@
 .select2-results__options::-webkit-scrollbar {
-  width: 16px;
+  width: 10px;
 }
 .select2-results__options::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -11,7 +11,7 @@
 .select2-results__options::-webkit-scrollbar-thumb {
   -webkit-border-radius: 10px;
   border-radius: 10px;
-  background: rgba(255, 0, 0, 0.8);
+  /* background: rgba(255, 0, 0, 0.8); */
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
