--- a/css/admin_page.css
+++ b/css/admin_page.css
@@ -19,3 +19,7 @@ table.committeetable td {
     border-left: 5px solid lightblue;
 }
 
+form  { display: table;      }
+p     { display: table-row;  }
+label { display: table-cell; }
+input { display: table-cell; }
