--- a/css/admin_page.css
+++ b/css/admin_page.css
@@ -19,7 +19,12 @@ table.committeetable td {
     border-left: 5px solid lightblue;
 }
 
-form  { display: table;      }
-p     { display: table-row;  }
-label { display: table-cell; }
-input { display: table-cell; }
+label{
+    display: inline-block;
+    clear: left;
+    width: 250px;
+    text-align: right;
+}
+input {
+  display: inline-block;
+}
