--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -1,4 +1,8 @@
-/*
+
+.wp-list-table .column-id {
+    width: 5%;
+}
+
 .wp-list-table .column-changed_by {
     width: 5%;
 }
@@ -16,16 +20,15 @@
 }
 
 .wp-list-table .column-submission_time {
-    width: auto;
+    width: 10%;
 }
+
 .wp-list-table .column-change_time {
     width: 10%;
+}
+
+
+/* .wp-list-table [class ^= "column-"] {
+    width: auto;
 } */
 
-.wp-list-table [class ^= "column-"] {
-    width: auto;
-}
-
-.wp-list-table .column-id {
-    width: 5%;
-}
