--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -11,6 +11,10 @@
     width: 10%;
 }
 
+.wp-list-table .column-submitter_email {
+    width: 15%;
+}
+
 .wp-list-table .column-change_type {
     width: 10%;
 }
@@ -25,6 +29,10 @@
 
 .wp-list-table .column-change_time {
     width: 10%;
+}
+
+.wp-list-table .column-change_summary {
+    width: 20%;
 }
 
 
