--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -15,8 +15,8 @@
     width: 15%;
 }
 
-.wp-list-table .column-change_type {
-    width: 15%;
+.wp-list-table .column-submission_type {
+    width: 10%;
 }
 
 .wp-list-table .column-change_made {
