--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -15,9 +15,9 @@
     width: 15%;
 }
 
-.wp-list-table .column-submission_type {
+/* .wp-list-table .column-submission_type {
     width: 10%;
-}
+} */
 
 .wp-list-table .column-change_made {
     width: 10%;
