--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -7,67 +7,7 @@
     display:block
 }; 
 
-.bmaw_quickedit_dialog_column
-{
-	width: 50%;
-	padding: 10px 30px;
-	float: left;
-}
-
-.bmaw_quickedit_dialog_form {
-	position: relative;
-}
-
-/* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
-.bmaw_quickedit_dialog_form:before, 
-.bmaw_quickedit_dialog_form:after { 
-	content: " "; 
-    display: table; 
-}
-
-.bmaw_quickedit_dialog_form:after { 
-	clear: both; 
-}
-
-.bmaw_quickedit_dialog_form label {
-	display: block;
-	padding: 40px 5px 5px 2px;
-	font-size: 1.1em;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	cursor: pointer;
-}
-
-.bmaw_quickedit_dialog_form input,
-.bmaw_quickedit_dialog_form textarea,
-.bmaw_quickedit_dialog_form select {
-	font-family: 'Lato', Calibri, Arial, sans-serif;
-	line-height: 1.5;
-	font-size: 1.4em;
-	padding: 5px 10px;
-	color: #fff;
-	display: block;
-	width: 100%;
-	background: transparent;
-}
-
-.bmaw_quickedit_dialog_form input,
-.bmaw_quickedit_dialog_form textarea {
-	border: 3px solid #fff;
-}
-
-.bmaw_quickedit_dialog_form textarea {
-	min-height: 200px;
-}
-
-.bmaw_quickedit_dialog_form input:focus,
-.bmaw_quickedit_dialog_form textarea:focus,
-.bmaw_quickedit_dialog_form label:active + input,
-.bmaw_quickedit_dialog_form label:active + textarea {
-	outline: none;
-	border: 3px solid #10689a;
-}
-
-.bmaw_quickedit_dialog_form select:focus {
-	outline: none;
+.quickedit {
+    column-count: 2;
+    column-gap: 40px;
 }
