--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -7,7 +7,7 @@
     display:block
 }; 
 
-.quickedit {
+.bmaw_quicked_dialog_form {
     column-count: 2;
     column-gap: 40px;
     background: red'
