--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -14,6 +14,8 @@
     grid-auto-flow: row;
     grid-template-areas:
       "bmaw-grid-col1 bmaw-grid-col2";
+      width: 80%;
+      height: 80%;
   }
   
   .bmaw-grid-col1 { grid-area: bmaw-grid-col1; }
