--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -41,7 +41,7 @@
   
   .bmaw-sg-col1-w2 { grid-area: bmaw-sg-col1-w2; }
   
-.bmaw_submission_quickedit_dialog input {
+.bmaw-sg input {
   line-height: 1.5;
   font-size: 1.2em;
   padding: 5px 10px;
@@ -49,7 +49,7 @@
   width: 90%;
 }
 
-.bmaw_submission_quickedit_dialog label {
+.bmaw-sg label {
   width: 100%;
   display: block;
   padding: 10px 5px 5px 2px;
