--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -57,6 +57,15 @@
     width: 90%;
   }
   
+
+.bmaw-sg-col1-t3 select {
+    line-height: 1.5;
+    font-size: 1.2em;
+    padding: 5px 10px;
+    display: block;
+    width: auto;
+  }
+  
 .bmaw-sg .bmaw-changed {
     background: #e7f478; 
    }
