rename to wbw from bmaw

--- a/css/admin_page.css
+++ b/css/admin_page.css
@@ -13,7 +13,7 @@ table.committeetable td {
     padding-top: 5px;
 }
 
-.bmaw_info_text {
+.wbw_info_text {
     padding-left: 15px;
     background: #fff;
     border-left: 5px solid lightblue;
