--- a/css/admin_service_areas.css
+++ b/css/admin_service_areas.css
@@ -13,7 +13,7 @@ table td {
   padding-top: 5px;
 }
 
-.bmaw_info_text {
+.wbw_info_text {
   padding-left: 15px;
   background: #fff;
   border-left: 5px solid lightblue;
@@ -32,7 +32,7 @@ input {
     float: left;
 }
 
-.bmaw-center-checkbox {
+.wbw-center-checkbox {
     text-align: center; 
     vertical-align: middle;
 }
