--- a/css/meeting-update-form.css
+++ b/css/meeting-update-form.css
@@ -19,3 +19,15 @@
 .select2-results__options::-webkit-scrollbar-thumb:window-inactive {
   background: rgba(255, 0, 0, 0.4);
 }
+
+.form-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  }
+  
+  .form-grid-div1 { grid-area: 1 / 1 / 2 / 2; }
+  .form-grid-div2 { grid-area: 1 / 2 / 2 / 3; }
+  .form-grid-div3 { grid-area: 2 / 1 / 3 / 3; }
