--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -69,7 +69,7 @@
   .form-grid-col1-bottom { grid-area: 3 / 1 / 4 / 4; }
 
 
-  .form-grid-col1-middle select {
+  .form-grid-col1-s3 select {
     line-height: 1.5;
     font-size: 1.2em;
     padding: 5px 10px;
