--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -32,71 +32,88 @@
   .form-grid-div2 { grid-area: 1 / 2 / 2 / 3; }
   .form-grid-div3 { grid-area: 2 / 1 / 3 / 3; } */
 
-  .form-grid {  display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    grid-auto-rows: 1fr;
-    gap: 5px 5px;
-    grid-auto-flow: row;
-  }
-  
-  .form-grid-col1 { grid-area: 1 / 1 / 4 / 4; }
-  
-  .form-grid-col2 { grid-area: 1 / 4 / 4 / 7; }
-  
-  .form-grid-bottom { grid-area: 4 / 1 / 5 / 7; }
-  
-  .form-grid-col1-top { grid-area: 1 / 1 / 2 / 4; }
-  
-  .form-grid-col1-middle {  display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "form-grid-col1-s1 form-grid-col1-s2 form-grid-col1-s3"
-      "form-grid-col1-s1 form-grid-col1-s2 form-grid-col1-s3"
-      "form-grid-col1-s1 form-grid-col1-s2 form-grid-col1-s3";
-    grid-area: 2 / 1 / 3 / 4;
-  }
-  
-  .form-grid-col1-s1 { grid-area: form-grid-col1-s1; }
-  
-  .form-grid-col1-s2 { grid-area: form-grid-col1-s2; }
-  
-  .form-grid-col1-s3 { grid-area: form-grid-col1-s3; }
-  
-  .form-grid-col1-bottom { grid-area: 3 / 1 / 4 / 4; }
+.form-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-auto-rows: 1fr;
+  gap: 5px 5px;
+  grid-auto-flow: row;
+}
 
+.form-grid-col1 {
+  grid-area: 1 / 1 / 4 / 4;
+}
 
-  .form-grid-col1-s3 select {
-    line-height: 1.5;
-    font-size: 1.2em;
-    padding: 5px 10px;
-    display: inline;
-    width: 30%;
-  }
+.form-grid-col2 {
+  grid-area: 1 / 4 / 4 / 7;
+}
 
-  .form-grid input {
-    line-height: 1.5;
-    font-size: 1.2em;
-    padding: 5px 10px;
-    display: block;
-    width: 90%;
-  }
-  
-  .form-grid select {
-      line-height: 1.5;
-      font-size: 1.2em;
-      padding: 5px 10px;
-      display: block;
-      width: 90%;
-    }
-    
-    .form-grid label {
-    width: 100%;
-    display: block;
-    padding: 10px 5px 5px 2px;
-    letter-spacing: 1px;
-    cursor: pointer;
-  }
+.form-grid-bottom {
+  grid-area: 4 / 1 / 5 / 7;
+}
+
+.form-grid-col1-top {
+  grid-area: 1 / 1 / 2 / 4;
+}
+
+.form-grid-col1-middle {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "form-grid-col1-s1 form-grid-col1-s2 form-grid-col1-s3"
+    "form-grid-col1-s1 form-grid-col1-s2 form-grid-col1-s3"
+    "form-grid-col1-s1 form-grid-col1-s2 form-grid-col1-s3";
+  grid-area: 2 / 1 / 3 / 4;
+}
+
+.form-grid-col1-s1 {
+  grid-area: form-grid-col1-s1;
+}
+
+.form-grid-col1-s2 {
+  grid-area: form-grid-col1-s2;
+}
+
+.form-grid-col1-s3 {
+  grid-area: form-grid-col1-s3;
+}
+
+.form-grid-col1-bottom {
+  grid-area: 3 / 1 / 4 / 4;
+}
+
+.form-grid input {
+  line-height: 1.5;
+  font-size: 1.2em;
+  padding: 5px 10px;
+  display: block;
+  width: 90%;
+}
+
+.form-grid select {
+  line-height: 1.5;
+  font-size: 1.2em;
+  padding: 5px 10px;
+  display: block;
+  width: 90%;
+}
+
+.form-grid-col1-s3 select {
+  line-height: 1.5;
+  font-size: 1.2em;
+  padding: 5px 10px;
+  display: inline;
+  width: 30%;
+}
+
+.form-grid label {
+  width: 100%;
+  display: block;
+  padding: 10px 5px 5px 2px;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
